src/index.css
:root {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
    line-height: 1.5;
    font-weight: 400;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

html {
    font-size: 62.5%;
}

* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-size: 1.5rem;
    background-color: #f1f1f1;
}

.wrapper {
    max-width: 1280px;
    width: 70%;
    margin-inline: auto;
    margin-top: 8ch;
    display: grid;
    gap: 3rem;
}

.no_subj_found {
    font-weight: 500;
    text-align: center;
    font-size: 2rem;
    margin-top: 3rem;
}

@media screen and (max-width: 910px) {
    .wrapper {
        width: 90%;
    }
}

@media screen and (max-width: 710px) {
    .wrapper {
        width: 95%;
    }
}

